ribbit/tests/ui/unsupported_type.stderr
error: Only type paths are supported
 --> tests/ui/unsupported_type.rs:3:8
  |
3 |     a: (u8, u16),
  |        ^^^^^^^^^
